path changes in scripts

--- a/code/allen-data-preprocess.ipynb
+++ b/code/allen-data-preprocess.ipynb
@@ -30,10 +30,9 @@
     "sns.set_style('ticks')\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../FIt-SNE')\n",
+    "sys.path.append('../../FIt-SNE')\n",
     "from fast_tsne import fast_tsne\n",
     "\n",
-    "# sys.path.append('../rna-seq-tsne')\n",
     "import rnaseqTools"
    ]
   },
@@ -316,14 +315,14 @@
    "source": [
     "# Sanity checking\n",
     "\n",
-    "clusterMemb = pd.read_csv('../data/allen-m1/cluster.membership.csv')\n",
+    "clusterMemb = pd.read_csv('../data/raw/allen/yao2020/cluster.membership.csv')\n",
     "\n",
     "print(np.min(clusterMemb['x'].values))\n",
     "print(np.max(clusterMemb['x'].values))\n",
     "print(np.unique(clusterMemb['x'].values).size)\n",
     "print(np.sum(np.isnan(clusterMemb['x'].values)))\n",
     "\n",
-    "clusterAnn = pd.read_csv('../data/allen-m1/cluster.annotation.csv')\n",
+    "clusterAnn = pd.read_csv('../data/raw/allen/yao2020/cluster.annotation.csv')\n",
     "clusterAnn"
    ]
   },
@@ -391,11 +390,11 @@
     "\n",
     "def load_allen_genes(folder):\n",
     "    if 'SmartSeq' in folder:\n",
-    "        data = pd.read_csv('../data/allen-m1/' + folder + '/exon.counts.csv.gz', engine='c', \n",
+    "        data = pd.read_csv('../data/raw/allen/yao2020/' + folder + '/exon.counts.csv.gz', engine='c', \n",
     "                           na_filter=False, usecols=[0,1])\n",
     "        genes = data.values[:,0]\n",
     "    else:\n",
-    "        f = tables.open_file('../data/allen-m1/' + folder + '/umi_counts.h5', 'r')\n",
+    "        f = tables.open_file('../data/raw/allen/yao2020/' + folder + '/umi_counts.h5', 'r')\n",
     "        group = f.get_node(f.root, 'matrix/features')\n",
     "        genes = getattr(group, 'name').read().astype(str)\n",
     "    return genes\n",
@@ -572,15 +571,15 @@
     "folder = '10X_nuclei_v3_Broad'\n",
     "\n",
     "from scipy.io import mmread\n",
-    "%time counts = mmread('../data/allen-m1/' + folder + '/matrix.mtx.gz')\n",
+    "%time counts = mmread('../data/raw/allen/yao2020/' + folder + '/matrix.mtx.gz')\n",
     "counts = scipy.sparse.csc_matrix(counts)\n",
-    "cells = pd.read_csv('../data/allen-m1/' + folder + '/barcodes.csv')\n",
+    "cells = pd.read_csv('../data/raw/allen/yao2020/' + folder + '/barcodes.csv')\n",
     "cells = cells.values.squeeze().astype(str)\n",
-    "genes = pd.read_csv('../data/allen-m1/' + folder + '/features.csv')\n",
+    "genes = pd.read_csv('../data/raw/allen/yao2020/' + folder + '/features.csv')\n",
     "genes = genes.values.squeeze().astype(str)       \n",
     "\n",
     "import h5py\n",
-    "with h5py.File('../data/allen-m1/' + folder + '/umi_counts.h5','w') as f:\n",
+    "with h5py.File('../data/raw/allen/yao2020/' + folder + '/umi_counts.h5','w') as f:\n",
     "    gm = f.create_group('matrix')\n",
     "    gf = f.create_group('matrix/features')\n",
     "    gf.create_dataset('name', data=genes.astype(bytes))\n",
@@ -611,7 +610,7 @@
     "        # in chunks to prevent Pandas from eating a huge amount of RAM\n",
     "        genes = []\n",
     "        sparseblocks = []\n",
-    "        for i,chunk in enumerate(pd.read_csv('../data/allen-m1/' + folder + '/exon.counts.csv.gz',\n",
+    "        for i,chunk in enumerate(pd.read_csv('../data/raw/allen/yao2020/' + folder + '/exon.counts.csv.gz',\n",
     "                                             chunksize=1000, na_filter=False, index_col=0)):\n",
     "            if i==0:\n",
     "                cells = np.array(chunk.columns)\n",
@@ -624,7 +623,7 @@
     "        # now load the intron table\n",
     "        genes_introns = []\n",
     "        sparseblocks = []\n",
-    "        for i,chunk in enumerate(pd.read_csv('../data/allen-m1/' + folder + '/intron.counts.csv.gz',\n",
+    "        for i,chunk in enumerate(pd.read_csv('../data/raw/allen/yao2020/' + folder + '/intron.counts.csv.gz',\n",
     "                                             chunksize=1000, na_filter=False, index_col=0)):\n",
     "            if i==0:\n",
     "                cells_introns = np.array(chunk.columns)\n",
@@ -636,7 +635,7 @@
     "        assert(all(genes==genes_introns))\n",
     "\n",
     "    else:\n",
-    "        f = tables.open_file('../data/allen-m1/' + folder + '/umi_counts.h5', 'r')\n",
+    "        f = tables.open_file('../data/raw/allen/yao2020/' + folder + '/umi_counts.h5', 'r')\n",
     "        group = f.get_node(f.root, 'matrix/features')\n",
     "        genes = getattr(group, 'name').read().astype(str)\n",
     "        group = f.get_node(f.root, 'matrix')\n",
@@ -648,7 +647,7 @@
     "        counts = scipy.sparse.csc_matrix((data, indices, indptr), shape=shape)\n",
     "        counts = counts.transpose()\n",
     "            \n",
-    "    clusterMemb = pd.read_csv('../data/allen-m1/cluster.membership.csv')\n",
+    "    clusterMemb = pd.read_csv('../data/raw/allen/yao2020/cluster.membership.csv')\n",
     "    if 'SmartSeq' in folder:\n",
     "        name2id = [(c[0].split('.')[1], c[1]) for c in clusterMemb.values \n",
     "                   if c[0].split('.')[0]==folder]\n",
@@ -662,7 +661,7 @@
     "    cells = cells[ind]\n",
     "    clusters = np.array([name2id[c] for c in cells]).astype(int) - 1\n",
     "        \n",
-    "    clusterAnn = pd.read_csv('../data/allen-m1/cluster.annotation.csv')\n",
+    "    clusterAnn = pd.read_csv('../data/raw/allen/yao2020/cluster.annotation.csv')\n",
     "    clusterColors = np.array(clusterAnn['cluster_color'])\n",
     "    clusterNames  = np.array(clusterAnn['cluster_label'])\n",
     "            \n",
@@ -786,7 +785,7 @@
     "        threshold = 0\n",
     "    m1data_compressed = compress(m1data, threshold)\n",
     "    \n",
-    "    pickle.dump(m1data_compressed, open('reduced-allen-data/' + folder + '.pickle', 'wb'), protocol=4)\n",
+    "    pickle.dump(m1data_compressed, open('../data/processed/reduced-allen-data/' + folder + '.pickle', 'wb'), protocol=4)\n",
     "    m1data = []"
    ]
   },
@@ -812,7 +811,7 @@
    "source": [
     "# Quickly update cluster annotations if needed\n",
     "\n",
-    "clusterAnn = pd.read_csv('../data/allen-m1/cluster.annotation.csv')\n",
+    "clusterAnn = pd.read_csv('../data/raw/allen/yao2020/cluster.annotation.csv')\n",
     "clusterColors = np.array(clusterAnn['cluster_color'])\n",
     "clusterNames  = np.array(clusterAnn['cluster_label'])\n",
     "neural_clusters = np.arange(np.where(clusterNames=='Meis2')[0][0])\n",
@@ -824,13 +823,13 @@
     "                \n",
     "    print('Processing ' + folder + '... ')\n",
     "\n",
-    "    with open('reduced-allen-data/' + folder + '.pickle', 'rb') as f:\n",
+    "    with open('../data/processed/reduced-allen-data/' + folder + '.pickle', 'rb') as f:\n",
     "        m1data = pickle.load(f)\n",
     "        for subset in m1data:\n",
     "            m1data[subset]['clusterNames'] = clusterNames[neural_clusters]\n",
     "            m1data[subset]['clusterColors'] = clusterColors[neural_clusters]\n",
     "    \n",
-    "    with open('reduced-allen-data/' + folder + '.pickle', 'wb') as f:\n",
+    "    with open('../data/processed/reduced-allen-data/' + folder + '.pickle', 'wb') as f:\n",
     "        pickle.dump(m1data, f, protocol=4)    "
    ]
   },
@@ -913,7 +912,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))['neurons']\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))['neurons']\n",
     "\n",
     "impGenes = rnaseqTools.geneSelection(m1data['counts'], n=1000, decay=1.5, plot=False)\n",
     "X = np.log2(m1data['counts'][:, impGenes] / m1data['seqDepths'] * np.median(m1data['seqDepths']) + 1)  \n",
@@ -925,7 +924,7 @@
     "X = X[:, np.argsort(s)[::-1]][:,:50]\n",
     "\n",
     "Z = downsampling_based_tsne(X)\n",
-    "pickle.dump(Z, open('pickles/10x-tsne-big.pickle', 'wb'))"
+    "pickle.dump(Z, open('../data/processed/rnaseq/10x-tsne-big.pickle', 'wb'))"
    ]
   },
   {
@@ -1748,7 +1747,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "\n",
     "def subset_tsne(key, perplexity=30):\n",
     "#     X = np.log2(m1data[key]['counts'] / m1data[key]['seqDepths'] * 1e+6 + 1)  \n",
@@ -1769,9 +1768,9 @@
     "Z2 = subset_tsne('viplamp')\n",
     "Z3 = subset_tsne('exc', perplexity=100)\n",
     "\n",
-    "pickle.dump(Z1, open('pickles/10x-tsne-pvsst.pickle', 'wb'))\n",
-    "pickle.dump(Z2, open('pickles/10x-tsne-viplamp.pickle', 'wb'))\n",
-    "pickle.dump(Z3, open('pickles/10x-tsne-exc.pickle', 'wb'))"
+    "pickle.dump(Z1, open('../data/processed/rnaseq/10x-tsne-pvsst.pickle', 'wb'))\n",
+    "pickle.dump(Z2, open('../data/processed/rnaseq/10x-tsne-viplamp.pickle', 'wb'))\n",
+    "pickle.dump(Z3, open('../data/processed/rnaseq/10x-tsne-exc.pickle', 'wb'))"
    ]
   },
   {
@@ -2601,7 +2600,7 @@
     "\n",
     "    print('Processing ' + folder + '... ')\n",
     "\n",
-    "    m1data = pickle.load(open('reduced-allen-data/' + folder + '.pickle', 'rb'))['neurons']\n",
+    "    m1data = pickle.load(open('../data/processed/reduced-allen-data/' + folder + '.pickle', 'rb'))['neurons']\n",
     "\n",
     "    if 'SmartSeq' in folder:\n",
     "        threshold=32\n",
@@ -2626,7 +2625,7 @@
     "        Z = downsampling_based_tsne(X)\n",
     "        \n",
     "    tsnes[folder] = Z\n",
-    "    pickle.dump(tsnes, open('pickles/references-tsnes.pickle', 'wb'))"
+    "    pickle.dump(tsnes, open('../data/processed/rnaseq/references-tsnes.pickle', 'wb'))"
    ]
   },
   {
@@ -3428,7 +3427,7 @@
     }
    ],
    "source": [
-    "tsnes = pickle.load(open('pickles/references-tsnes.pickle', 'rb'))\n",
+    "tsnes = pickle.load(open('../data/processed/rnaseq/references-tsnes.pickle', 'rb'))\n",
     "plt.figure(figsize=(9,9))\n",
     "\n",
     "for subpl,folder in enumerate(\n",
@@ -3437,7 +3436,7 @@
     "     'SmartSeq_cells_AIBS', 'SmartSeq_nuclei_AIBS',\n",
     "     '10X_nuclei_v3_Broad'], 1):\n",
     "\n",
-    "    m1data = pickle.load(open('reduced-allen-data/' + folder + '.pickle', 'rb'))['neurons']\n",
+    "    m1data = pickle.load(open('../data/processed/reduced-allen-data/' + folder + '.pickle', 'rb'))['neurons']\n",
     "    col = m1data['clusterColors'][m1data['clusters']]\n",
     "    Z = tsnes[folder]\n",
     "    \n",
@@ -3501,17 +3500,17 @@
     "    counts = sparse.bmat(sparseblocks)\n",
     "    return (counts.T, np.array(genes), cells, np.array(areas))\n",
     "\n",
-    "filenames = ['../data/tasic-nature/mouse_VISp_2018-06-14_exon-matrix.csv',\n",
-    "             '../data/tasic-nature/mouse_ALM_2018-06-14_exon-matrix.csv']\n",
+    "filenames = ['../data/raw/allen/tasic2018/mouse_VISp_2018-06-14_exon-matrix.csv',\n",
+    "             '../data/raw/allen/tasic2018/mouse_ALM_2018-06-14_exon-matrix.csv']\n",
     "counts, genes, cells, areas = sparseload(filenames)\n",
     "\n",
-    "genesDF = pd.read_csv('../data/tasic-nature/mouse_VISp_2018-06-14_genes-rows.csv')\n",
+    "genesDF = pd.read_csv('../data/raw/allen/tasic2018/mouse_VISp_2018-06-14_genes-rows.csv')\n",
     "ids     = genesDF['gene_entrez_id'].tolist()\n",
     "symbols = genesDF['gene_symbol'].tolist()\n",
     "id2symbol = dict(zip(ids, symbols))\n",
     "genes = np.array([id2symbol[g] for g in genes])\n",
     "\n",
-    "clusterInfo = pd.read_csv('../data/tasic-nature/sample_heatmap_plot_data.csv')\n",
+    "clusterInfo = pd.read_csv('../data/raw/allen/tasic2018/sample_heatmap_plot_data.csv')\n",
     "goodCells  = clusterInfo['sample_name'].values\n",
     "ids        = clusterInfo['cluster_id'].values\n",
     "labels     = clusterInfo['cluster_label'].values\n",
@@ -3563,8 +3562,8 @@
     "\n",
     "# Load intron counts as well\n",
     "\n",
-    "filenames = ['../data/tasic-nature/mouse_VISp_2018-06-14_intron-matrix.csv',\n",
-    "             '../data/tasic-nature/mouse_ALM_2018-06-14_intron-matrix.csv']\n",
+    "filenames = ['../data/raw/allen/tasic2018/mouse_VISp_2018-06-14_intron-matrix.csv',\n",
+    "             '../data/raw/allen/tasic2018/mouse_ALM_2018-06-14_intron-matrix.csv']\n",
     "counts_intron, genes_intron, cells_intron, areas_intron = sparseload(filenames)\n",
     "genes_intron = np.array([id2symbol[g] for g in genes_intron])\n",
     "\n",
@@ -3593,7 +3592,7 @@
     "                    'intronCounts': counts_intron[:,impGenes],\n",
     "                    'intronSeqDepths': intronSeqDepths}\n",
     "\n",
-    "pickle.dump(tasic2018reduced, open('reduced-allen-data/tasic2018.pickle', 'wb'))"
+    "pickle.dump(tasic2018reduced, open('../data/processed/reduced-allen-data/tasic2018.pickle', 'wb'))"
    ]
   }
  ],
