--- a/code/families.ipynb
+++ b/code/families.ipynb
@@ -67,14 +67,14 @@
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles \\\n",
     "                                         exonLengths intronLengths')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
-    "with open('../../BICCN patch-seq data/M1/ephys/three_traces/three_traces.pickle', 'rb') as f:\n",
+    "with open('../data/processed/ephys/three_traces.pickle', 'rb') as f:\n",
     "    three_traces = pickle.load(f)\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size\n",
@@ -158,7 +158,10 @@
    "source": [
     "import os\n",
     "swcfiles = {}\n",
-    "for dirpath, dirnames, filenames in os.walk('../../BICCN patch-seq data/M1/morphology/FINAL'):\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/excitatory/'):\n",
+    "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
+    "        swcfiles[filename[:-4]] = os.path.join(dirpath, filename)\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/inhibitory/'):\n",
     "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
     "        swcfiles[filename[:-4]] = os.path.join(dirpath, filename)\n",
     "        \n",
@@ -1065,7 +1068,7 @@
     "    if np.sum(ind) >= 10:\n",
     "        meanTypePhenotype[c,:] = np.mean(ephysTransformed[ind,:], axis=0)\n",
     "\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "meanTypeRNA = np.zeros((clusterN, m1data['neurons']['counts'].shape[1])) * np.nan\n",
     "\n",
     "for c in range(clusterN):\n",
@@ -1134,7 +1137,7 @@
     "\n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/suppfigures/pooled-families.png', dpi=300)"
+    "plt.savefig('../figures/suppfigures/pooled-families.png', dpi=300)"
    ]
   },
   {
@@ -2020,7 +2023,7 @@
     "fig.text(.4, .32, 'j', fontsize=8, fontweight='bold', va='top')\n",
     "fig.text(.4, .16, 'l', fontsize=8, fontweight='bold', va='top')\n",
     "\n",
-    "plt.savefig('figures/suppfigures/all-families.png')"
+    "plt.savefig('../figures/suppfigures/all-families.png')"
    ]
   },
   {
@@ -2895,7 +2898,7 @@
     "    if np.sum(ind) >= 5:\n",
     "        meanTypePhenotype[c,:] = np.mean(ephysTransformed[ind,:], axis=0)\n",
     "\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "meanTypeRNA = np.zeros((clusterN, m1data['neurons']['counts'].shape[1])) * np.nan\n",
     "\n",
     "for c in range(clusterN):\n",
@@ -2952,8 +2955,8 @@
     "family = 'exc'\n",
     "print(np.sum(selection))\n",
     "\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
     "                              m1.exonCounts[selection,:], m1.genes, Z, knn=10,\n",
     "                              newIntronCounts=m1.intronCounts[selection,:], \n",
@@ -3069,8 +3072,8 @@
     "family = 'viplamp'    \n",
     "print(np.sum(selection))\n",
     "\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq//10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
     "                              m1.exonCounts[selection,:], m1.genes, Z, knn=10,\n",
     "                              newIntronCounts=m1.intronCounts[selection,:], \n",
@@ -3208,8 +3211,8 @@
     "family = 'pvsst'\n",
     "print(np.sum(selection))\n",
     "\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
     "                              m1.exonCounts[selection,:], m1.genes, Z, knn=10, \n",
     "                              newExonLengths=m1.exonLengths, newIntronLengths=m1.intronLengths,\n",
@@ -3363,8 +3366,8 @@
     "family = 'pvsst'\n",
     "print(np.sum(selection))\n",
     "\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq//10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
     "                              m1.exonCounts[selection,:], m1.genes, Z, knn=10, \n",
     "                              newExonLengths=m1.exonLengths, newIntronLengths=m1.intronLengths,\n",
@@ -3444,7 +3447,7 @@
    "outputs": [],
    "source": [
     "bbox =  matplotlib.transforms.Bbox([[0,0.06],[7.2,2.86]])\n",
-    "plt.savefig('figures/mainfigures/families.png', dpi=400, bbox_inches=bbox)"
+    "plt.savefig('../figures/mainfigures/families.png', dpi=400, bbox_inches=bbox)"
    ]
   }
  ],
