--- a/code/flagship-figure.ipynb
+++ b/code/flagship-figure.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "# import tsne\n",
     "import sys#; import os\n",
-    "sys.path.append('../FIt-SNE')\n",
+    "sys.path.append('../../FIt-SNE')\n",
     "from fast_tsne import fast_tsne\n",
     "\n",
     "# import my feature selection function\n",
@@ -69,11 +69,11 @@
     "houstonData = namedtuple('houstonData', 'counts cells genes layers cre yields traced \\\n",
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size\n",
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../BICCN patch-seq data/M1/ephys_analysis/SanityCheckPlots/three_traces.pickle', 'rb') as f:\n",
+    "with open('../data/processed/ephys/three_traces.pickle', 'rb') as f:\n",
     "    three_traces = pickle.load(f)\n",
     "\n",
     "for c in list(three_traces.keys()):\n",
@@ -116,8 +116,10 @@
    "source": [
     "import os\n",
     "swcfiles = {}\n",
-    "swcfiles = {}\n",
-    "for dirpath, dirnames, filenames in os.walk('../../BICCN patch-seq data/M1/morphology/FINAL'):\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/excitatory/'):\n",
+    "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
+    "        swcfiles[filename[:-4]] = os.path.join(dirpath, filename)\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/inhibitory/'):\n",
     "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
     "        swcfiles[filename[:-4]] = os.path.join(dirpath, filename)\n",
     "        \n",
@@ -193,7 +195,7 @@
     "    c = colorsys.rgb_to_hls(*mc.to_rgb(c))\n",
     "    return colorsys.hls_to_rgb(c[0], max(0, min(1, amount * c[1])), c[2])\n",
     "\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))"
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))"
    ]
   },
   {
@@ -211,8 +213,8 @@
     }
    ],
    "source": [
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
-    "Z = pickle.load(open('pickles/10x-tsne-big.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-big.pickle', 'rb'))\n",
     "\n",
     "pos = rnaseqTools.map_to_tsne(m1data['neurons']['counts'],\n",
     "                              m1data['neurons']['genes'],\n",
@@ -2231,7 +2233,7 @@
     "fig.text(.20, .42, 'f', fontsize=8, fontweight='bold')\n",
     "fig.text(.66, .42, 'g', fontsize=8, fontweight='bold')\n",
     "    \n",
-    "plt.savefig('figures/flagship/flagship-patchseq.png', dpi=300)"
+    "plt.savefig('../figures/flagship/flagship-patchseq.png', dpi=300)"
    ]
   },
   {
@@ -3264,7 +3266,7 @@
     "ax_tsne.set_xlim(tsnexlim)\n",
     "ax_tsne.set_ylim(tsneylim)\n",
     "    \n",
-    "plt.savefig('figures/flagship/gotta-patch-them-all-2.png', dpi=300)"
+    "plt.savefig('../figures/flagship/gotta-patch-them-all-2.png', dpi=300)"
    ]
   }
  ],
