--- a/code/phenotype-tsne.ipynb
+++ b/code/phenotype-tsne.ipynb
@@ -110,11 +110,11 @@
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles \\\n",
     "                                         exonLengths intronLengths')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size\n",
@@ -6387,7 +6387,7 @@
     "fig.text(.52, 1, 'c', fontsize=8, fontweight='bold', va='top')\n",
     "fig.text(.52, .42, 'd', fontsize=8, fontweight='bold')\n",
     "    \n",
-    "plt.savefig('figures/mainfigures/phenotype-tsnes.png', dpi=400)"
+    "plt.savefig('../figures/mainfigures/phenotype-tsnes.png', dpi=400)"
    ]
   },
   {
@@ -9931,7 +9931,7 @@
     "fig.text(.5, .5, 'e', fontsize=8, fontweight='bold', va='top')\n",
     "fig.text(.76, .5, 'f', fontsize=8, fontweight='bold', va='top')\n",
     "    \n",
-    "plt.savefig('figures/suppfigures/entropies.png', dpi=300)"
+    "plt.savefig('../figures/suppfigures/entropies.png', dpi=300)"
    ]
   },
   {
@@ -11008,12 +11008,15 @@
    "source": [
     "sns_styleset()\n",
     "\n",
-    "with open('../../BICCN patch-seq data/M1/ephys/three_traces/three_traces.pickle', 'rb') as f:\n",
+    "with open('../data/processed/ephys/three_traces.pickle', 'rb') as f:\n",
     "    three_traces = pickle.load(f)\n",
     "    \n",
     "import os\n",
     "swcfiles = {}\n",
-    "for dirpath, dirnames, filenames in os.walk('../../BICCN patch-seq data/M1/morphology/FINAL'):\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/excitatory/'):\n",
+    "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
+    "        swcfiles[filename[:-4]] = os.path.join(dirpath, filename)\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/inhibitory/'):\n",
     "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
     "        swcfiles[filename[:-4]] = os.path.join(dirpath, filename)\n",
     "        \n",
@@ -12006,8 +12009,8 @@
     "print(np.sum(selection))\n",
     "lims = [[-22,-2],[52,72]]\n",
     "\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
     "                              m1.exonCounts[selection,:], m1.genes, Z, knn=10, \n",
     "                              newIntronCounts=m1.intronCounts[selection,:],\n",
@@ -12115,8 +12118,8 @@
     "col = m1.ephys[selection,:][:, m1.ephysNames==featuresToShow[0]].squeeze()\n",
     "\n",
     "plt.sca(ax_ex2)\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "plt.axis('equal')\n",
     "plt.scatter(Z[:,0], Z[:,1], s=2, edgecolor='none', c='#aaaaaa')\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
@@ -12302,8 +12305,8 @@
     "col = m1.ephys[selection,:][:, m1.ephysNames==featuresToShow[0]].squeeze()\n",
     "\n",
     "plt.sca(ax_ex3)\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "plt.axis('equal')\n",
     "plt.scatter(Z[:,0], Z[:,1], s=2, edgecolor='none', c='#aaaaaa')\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
@@ -12493,8 +12496,8 @@
     "print(np.sum(selection))\n",
     "lims = [[-75,-15],[-15,35]]\n",
     "\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/rnaseq/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
     "                              m1.exonCounts[selection,:], m1.genes, Z, knn=10, \n",
     "                              newIntronCounts=m1.intronCounts[selection,:],\n",
@@ -12674,7 +12677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.savefig('figures/mainfigures/singletypes.png', dpi=400)"
+    "plt.savefig('../figures/mainfigures/singletypes.png', dpi=400)"
    ]
   }
  ],
