--- a/code/physiological-temperature.ipynb
+++ b/code/physiological-temperature.ipynb
@@ -62,11 +62,11 @@
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles \\\n",
     "                                         exonLengths intronLengths')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size\n",
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "data_exons = pd.read_csv('data/m1_patchseq_phys_temp_exon_counts.csv.gz', \n",
+    "data_exons = pd.read_csv('../data/m1_patchseq_phys_temp_exon_counts.csv.gz', \n",
     "                   na_filter=False, index_col=0)\n",
     "exonCounts = data_exons.values.transpose()\n",
     "exonCounts = scipy.sparse.csr_matrix(exonCounts)\n",
@@ -111,7 +111,7 @@
     "\n",
     "print('Count matrix shape (exon):  ', exonCounts.shape)\n",
     "\n",
-    "data_introns = pd.read_csv('data/m1_patchseq_phys_temp_intron_counts.csv.gz', \n",
+    "data_introns = pd.read_csv('../data/m1_patchseq_phys_temp_intron_counts.csv.gz', \n",
     "                   na_filter=False, index_col=0)\n",
     "intronCounts = data_introns.values.transpose()\n",
     "intronCounts = scipy.sparse.csr_matrix(intronCounts)\n",
@@ -119,7 +119,7 @@
     "\n",
     "print('Count matrix shape (intron):', intronCounts.shape)\n",
     "\n",
-    "data = pd.read_csv('data/gene_lengths.txt')\n",
+    "data = pd.read_csv('../data/gene_lengths.txt')\n",
     "data = data.set_index('GeneID')\n",
     "data = data.loc[genes]\n",
     "\n",
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data/m1_patchseq_phys_temp_meta_data.csv', sep='\\t')\n",
+    "data = pd.read_csv('../data/m1_patchseq_phys_temp_meta_data.csv', sep='\\t')\n",
     "thickness = data['Cortical thickness (µm)'].values\n",
     "depth = data['Soma depth (µm)'].values\n",
     "\n",
@@ -165,7 +165,7 @@
    "source": [
     "# EPHYS DATA\n",
     "\n",
-    "ephysData = pd.read_csv('data/m1_patchseq_phys_temp_ephys_features.csv')\n",
+    "ephysData = pd.read_csv('../data/m1_patchseq_phys_temp_ephys_features.csv')\n",
     "ephysNames = np.array(ephysData.columns[1:]).astype(str)\n",
     "ephysCells = ephysData['cell id'].values\n",
     "ephysData = ephysData.values[:,1:].astype('float')\n",
@@ -209,7 +209,7 @@
     "    n = counts.shape[0]\n",
     "    \n",
     "    # Map to Tasic for QC    \n",
-    "    tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "    tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "    if intronCounts is not None:\n",
     "        tasicAss, tasicCorrs = rnaseqTools.map_to_clusters(tasic2018['counts'], tasic2018['genes'],\n",
     "                counts, genes, tasic2018['clusters'], returnCmeans=True,\n",
@@ -281,7 +281,7 @@
     "                'SmartSeq_cells_AIBS', 'SmartSeq_nuclei_AIBS',\n",
     "                '10X_nuclei_v3_Broad']:\n",
     "    \n",
-    "        m1data = pickle.load(open('reduced-allen-data/' + dataset + '.pickle', 'rb'))\n",
+    "        m1data = pickle.load(open('../data/processed/reduced-allen-data/' + dataset + '.pickle', 'rb'))\n",
     "        K = m1data['neurons']['clusterNames'].size\n",
     "        results['m1ass'][dataset] = np.zeros(n) * np.nan\n",
     "        results['m1corrs'][dataset] = np.zeros((n, K)) * np.nan\n",
@@ -408,12 +408,12 @@
    "source": [
     "# Export\n",
     "\n",
-    "tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "n = m1_34.exonCounts.shape[0]\n",
     "\n",
     "totalCounts = m1_34.exonCounts + m1_34.intronCounts\n",
     "\n",
-    "with open('export/rnatypes-phys-temp.csv', 'wt') as f:\n",
+    "with open('../data/processed/rnaseq/export/rnatypes-phys-temp.csv', 'wt') as f:\n",
     "    for num in range(n):\n",
     "        print(np.sum(totalCounts[num,:]>0), file=f, end='\\t')\n",
     "        \n",
@@ -1270,8 +1270,8 @@
     "shapes = {'1': '^', '2/3': 'o', '5': 's', '6': '+'}\n",
     "sizes  = {'1': 5,   '2/3': 5,   '5': 4,   '6': 15}\n",
     "\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
-    "Z = pickle.load(open('pickles/10x-tsne-big.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-big.pickle', 'rb'))\n",
     "\n",
     "print(Z.shape)\n",
     "\n",
@@ -3011,8 +3011,8 @@
     "family = 'pvsst'\n",
     "print(np.sum(selection))\n",
     "\n",
-    "Z = pickle.load(open('pickles/10x-tsne-' + family + '.pickle', 'rb'))\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-' + family + '.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
     "pos = rnaseqTools.map_to_tsne(m1data[family]['counts'], m1data[family]['genes'],\n",
     "                              m1.exonCounts[selection,:], m1.genes, Z, knn=10,\n",
     "                              newIntronCounts=m1.intronCounts[selection,:], \n",
@@ -3194,7 +3194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.savefig('figures/suppfigures/sst-comparison-layer5.png', dpi=400)"
+    "plt.savefig('../figures/suppfigures/sst-comparison-layer5.png', dpi=400)"
    ]
   },
   {
@@ -4111,7 +4111,7 @@
     "\n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/suppfigures/it-pt-temperature.png', dpi=400)"
+    "plt.savefig('../figures/suppfigures/it-pt-temperature.png', dpi=400)"
    ]
   },
   {
@@ -4957,8 +4957,7 @@
     "plt.ylabel('AP width (ms)')\n",
     "\n",
     "sns.despine()\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('figures/misc/revision/pt-it-scatters.png',dpi=200)"
+    "plt.tight_layout()"
    ]
   }
  ],
