--- a/code/plot-ephys-features.ipynb
+++ b/code/plot-ephys-features.ipynb
@@ -60,11 +60,11 @@
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles \\\n",
     "                                         exonLengths intronLengths')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size\n",
@@ -112,7 +112,7 @@
     "    plt.ylabel(m1.ephysNames[e])\n",
     "    sns.despine()\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig('figures/sanity-checks/ephys-features/' + m1.ephysNames[e].split('(')[0].strip() + '.png', dpi=200)\n",
+    "    plt.savefig('../figures/sanity-checks/ephys-features/' + m1.ephysNames[e].split('(')[0].strip() + '.png', dpi=200)\n",
     "    plt.close()"
    ]
   },
@@ -948,7 +948,7 @@
     "    plt.text(.01, .9, meaningfulFeatures[e], transform=ax.transAxes)\n",
     "\n",
     "sns.despine()\n",
-    "plt.savefig('figures/suppfigures/ephys-features.png', dpi=300)"
+    "plt.savefig('../figures/suppfigures/ephys-features.png', dpi=300)"
    ]
   },
   {
@@ -980,7 +980,7 @@
     "from matplotlib.backends.backend_pdf import PdfPages\n",
     "\n",
     "plt.ioff()\n",
-    "with PdfPages('figures/suppfigures/all-ephys-features.pdf') as pdf:\n",
+    "with PdfPages('../figures/suppdocs/all-ephys-features.pdf') as pdf:\n",
     "    for page in range(np.ceil(m1.ephys.shape[1]/perpage).astype(int)):\n",
     "        plt.figure(figsize=(8.27, 11.69)) # A4\n",
     "        for i in range(page*perpage, min((page+1)*perpage, m1.ephys.shape[1])):\n",
