--- a/code/plot-them-all.ipynb
+++ b/code/plot-them-all.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +60,11 @@
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles \\\n",
     "                                         exonLengths intronLengths')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size\n",
@@ -87,13 +87,13 @@
    "source": [
     "# Load ephys traces\n",
     "\n",
-    "with open('../../BICCN patch-seq data/M1/ephys/three_traces/three_traces.pickle', 'rb') as f:\n",
+    "with open('../data/processed/ephys/three_traces.pickle', 'rb') as f:\n",
     "    three_traces = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,10 @@
     "\n",
     "import os\n",
     "swcfiles = {}\n",
-    "for dirpath, dirnames, filenames in os.walk('../../BICCN patch-seq data/M1/morphology/FINAL'):\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/excitatory/'):\n",
+    "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
+    "        swcfiles[filename[:-4]] = os.path.join(dirpath, filename)\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/inhibitory/'):\n",
     "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
     "        swcfiles[filename[:-4]] = os.path.join(dirpath, filename)\n",
     "        \n",
@@ -126,7 +129,7 @@
     "        print('Not marked as traced: ' + c)\n",
     "        \n",
     "swcfiles_vipdendrites = {}\n",
-    "for dirpath, dirnames, filenames in os.walk('../../BICCN patch-seq data/M1/morphology/VIP Dendrites only/SWC/'):\n",
+    "for dirpath, dirnames, filenames in os.walk('../data/raw/morph/vip_dendrites_only/'):\n",
     "    for filename in [f for f in filenames if f.endswith('.SWC')]:\n",
     "        swcfiles_vipdendrites[filename[:-4]] = os.path.join(dirpath, filename)\n",
     "        \n",
@@ -1127,7 +1130,7 @@
     "    else:\n",
     "        w += typerowgaps[currentrow]\n",
     "\n",
-    "plt.savefig('figures/mainfigures/pokemons.png', dpi=400)\n",
+    "plt.savefig('../figures/mainfigures/pokemons.png', dpi=400)\n",
     "print('Plotted {} neurons in {} types.'.format(counter_neurons, counter_types))"
    ]
   },
@@ -1235,7 +1238,7 @@
     "    if (currentrow < rows-1) or ((currentrow == rows-1) and startnewaxis):\n",
     "         bbox =  matplotlib.transforms.Bbox([[0, 7.2/9*1.6],[7.2, 7.2/9*1.6 * rows]])\n",
     "        \n",
-    "    plt.savefig('figures/sanity-checks/pretty-neurons/{}.png'.format(\n",
+    "    plt.savefig('../figures/sanity-checks/pretty-neurons/{}.png'.format(\n",
     "        ''.join(clusterNames[typ].split('/'))), dpi=300, bbox_inches=bbox)\n",
     "    \n",
     "    plt.close()\n",
@@ -1285,7 +1288,7 @@
     "startnewtype = True\n",
     "\n",
     "plt.ioff()\n",
-    "with PdfPages('figures/suppfigures/allcells.pdf') as pdf:\n",
+    "with PdfPages('../figures/suppdocs/allcells.pdf') as pdf:\n",
     "    for typ in range(clusterN):\n",
     "        print(typ, end=' ')\n",
     "        \n",
@@ -1452,7 +1455,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "\n",
     "ephys_width = 0.35\n",
     "gap = 0.02\n",
@@ -1533,7 +1536,7 @@
     "    if (currentrow < rows-1) or ((currentrow == rows-1) and startnewaxis):\n",
     "         bbox =  matplotlib.transforms.Bbox([[0, 7.2/9*1.6],[7.2, 7.2/9*1.6 * rows]])\n",
     "        \n",
-    "    plt.savefig('figures/sanity-checks/pretty-interneurons-tasic2018/{}.png'.format(\n",
+    "    plt.savefig('../figures/sanity-checks/pretty-interneurons-tasic2018/{}.png'.format(\n",
     "        ''.join(tasic2018['clusterNames'][typ].split('/'))), dpi=300, bbox_inches=bbox)\n",
     "    \n",
     "    plt.close()"
@@ -2347,7 +2350,7 @@
     }
    ],
    "source": [
-    "tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "\n",
     "ephys_width = 0.35\n",
     "gap = 0.02\n",
@@ -2495,7 +2498,7 @@
     "ind = ~np.isnan(ttypes['tasic_ass']) & (m1.exclude=='') & ~np.isnan(m1.depth) & ~np.isnan(m1.thickness)\n",
     "print('{} total cells in panel a'.format(np.sum(ind)))\n",
     "\n",
-    "plt.savefig('figures/suppfigures/pokemons-tasic2018.png', dpi=400)"
+    "plt.savefig('../figures/suppfigures/pokemons-tasic2018.png', dpi=400)"
    ]
   },
   {
