--- a/code/reduced-rank-regression.ipynb
+++ b/code/reduced-rank-regression.ipynb
@@ -70,11 +70,11 @@
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles \\\n",
     "                                         exonLengths intronLengths')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size"
@@ -1915,7 +1915,7 @@
     "fig.text(0, .45,  'b', fontsize=8, fontweight='bold')\n",
     "        \n",
     "sns.despine(left=True, bottom=True)\n",
-    "plt.savefig('figures/mainfigures/rrr.png', dpi=400)"
+    "plt.savefig('../figures/mainfigures/rrr.png', dpi=400)"
    ]
   },
   {
@@ -2226,7 +2226,7 @@
     "for r in ranks:\n",
     "    cvresults_rank[r] = sparseRRR.elastic_rrr_cv(X, Y, rank=r, reps=1, folds=10, alphas=alphas, lambdas=lambdas)\n",
     "    \n",
-    "pickle.dump([cvresults, cvresults_rank], open('pickles/cvresults.pickle', 'wb'))"
+    "pickle.dump([cvresults, cvresults_rank], open('../data/processed/rnaseq/cvresults.pickle', 'wb'))"
    ]
   },
   {
@@ -3030,7 +3030,7 @@
     }
    ],
    "source": [
-    "cvresults, cvresults_rank = pickle.load(open('pickles/cvresults.pickle', 'rb'))\n",
+    "cvresults, cvresults_rank = pickle.load(open('../data/processed/rnaseq/cvresults.pickle', 'rb'))\n",
     "\n",
     "r2, r2_relaxed, nonzeros, corrs, corrs_relaxed = cvresults\n",
     "with warnings.catch_warnings():\n",
@@ -3114,7 +3114,7 @@
     "fig.text(.51, .98,  'c', fontsize=8, fontweight='bold', va='top')\n",
     "fig.text(.76, .98,  'd', fontsize=8, fontweight='bold', va='top')\n",
     "\n",
-    "plt.savefig('figures/suppfigures/rrr-cv.png', dpi=300)"
+    "plt.savefig('../figures/suppfigures/rrr-cv.png', dpi=300)"
    ]
   },
   {
@@ -3141,7 +3141,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "ionchannelgenes = pd.read_csv('data/ion-channel-genes-group-177.csv')['Approved symbol'].values\n",
+    "ionchannelgenes = pd.read_csv('../data/ion-channel-genes-group-177.csv')['Approved symbol'].values\n",
     "print(ionchannelgenes.size)\n",
     "\n",
     "selection = ~np.isnan(np.sum(ephysY, axis=1)) & (m1.exclude=='') & (ttypes['type']!='')\n",
@@ -4072,7 +4072,7 @@
     "fig.text(0, .45,  'b', fontsize=8, fontweight='bold')\n",
     "        \n",
     "sns.despine(left=True, bottom=True)\n",
-    "plt.savefig('figures/suppfigures/rrr-ionchannels.png', dpi=400)"
+    "plt.savefig('../figures/suppfigures/rrr-ionchannels.png', dpi=400)"
    ]
   },
   {
@@ -5183,7 +5183,7 @@
    "outputs": [],
    "source": [
     "sns.despine(left=True, bottom=True)\n",
-    "plt.savefig('figures/suppfigures/rrr-morph.png', dpi=400)"
+    "plt.savefig('../figures/suppfigures/rrr-morph.png', dpi=400)"
    ]
   }
  ],
