--- a/code/ttype-assignment.ipynb
+++ b/code/ttype-assignment.ipynb
@@ -66,15 +66,15 @@
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles \\\n",
     "                                         exonLengths intronLengths')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size\n",
     "\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
     "# Our layer definition\n",
     "with np.errstate(invalid='ignore'):\n",
@@ -254,7 +254,7 @@
     "    n = counts.shape[0]\n",
     "    \n",
     "    # Map to Tasic for QC    \n",
-    "    tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "    tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "    if intronCounts is not None:\n",
     "        tasicAss, tasicCorrs = rnaseqTools.map_to_clusters(tasic2018['counts'], tasic2018['genes'],\n",
     "                counts, genes, tasic2018['clusters'], returnCmeans=True,\n",
@@ -326,7 +326,7 @@
     "                'SmartSeq_cells_AIBS', 'SmartSeq_nuclei_AIBS',\n",
     "                '10X_nuclei_v3_Broad']:\n",
     "    \n",
-    "        m1data = pickle.load(open('reduced-allen-data/' + dataset + '.pickle', 'rb'))\n",
+    "        m1data = pickle.load(open('../data/processed/reduced-allen-data/' + dataset + '.pickle', 'rb'))\n",
     "        K = m1data['neurons']['clusterNames'].size\n",
     "        results['m1ass'][dataset] = np.zeros(n) * np.nan\n",
     "        results['m1corrs'][dataset] = np.zeros((n, K)) * np.nan\n",
@@ -450,7 +450,7 @@
     "ttypes = consensus_assignment(m1.exonCounts, m1.genes, intronCounts=m1.intronCounts,\n",
     "                              exonLengths=m1.exonLengths, intronLengths=m1.intronLengths)\n",
     "\n",
-    "pickle.dump(ttypes, open('pickles/ttypes.pickle', 'wb'))"
+    "pickle.dump(ttypes, open('../data/processed/rnaseq/ttypes.pickle', 'wb'))"
    ]
   },
   {
@@ -594,12 +594,12 @@
    "source": [
     "# Export\n",
     "\n",
-    "tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "n = m1.exonCounts.shape[0]\n",
     "\n",
     "totalCounts = m1.exonCounts+m1.intronCounts\n",
     "\n",
-    "with open('export/rnatypes.csv', 'wt') as f:\n",
+    "with open('../data/processed/rnaseq/rnatypes.csv', 'wt') as f:\n",
     "    for num in range(n):\n",
     "        print(np.sum(totalCounts[num,:]>0), file=f, end='\\t')\n",
     "        \n",
@@ -1514,7 +1514,7 @@
     }
    ],
    "source": [
-    "tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "\n",
     "n = m1.cells.size\n",
     "highestcorrs = np.zeros((n, len(ttypes['m1corrs'])))                        \n",
@@ -1547,7 +1547,7 @@
     "plt.ylabel('Soma depth (μm)')\n",
     "plt.gca().invert_yaxis()\n",
     "\n",
-    "nissl = pd.read_csv('../../BICCN patch-seq data/M1/preprocessed_data/m1_nissl_layer_boundaries.csv',sep='\\t')\n",
+    "nissl = pd.read_csv('../data/m1_nissl_layer_boundaries.csv',sep='\\t')\n",
     "plt.scatter(nissl['L6/total'], nissl['L1'], s=dotsize, color='blue', edgecolors='none')\n",
     "plt.scatter(nissl['L6/total'], nissl['L2/3'], s=dotsize, color='blue', edgecolors='none')\n",
     "plt.scatter(nissl['L6/total'], nissl['L5'], s=dotsize, color='blue', edgecolors='none')\n",
@@ -1672,7 +1672,7 @@
     "plt.gcf().align_labels()\n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/suppfigures/qc.png', dpi=300)"
+    "plt.savefig('../figures/suppfigures/qc.png', dpi=300)"
    ]
   },
   {
@@ -2512,7 +2512,7 @@
     "        \n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/suppfigures/crelines.png', dpi=300)\n",
+    "plt.savefig('../figures/suppfigures/crelines.png', dpi=300)\n",
     "\n",
     "print('{} cells plotted'.format(count))"
    ]
@@ -3322,7 +3322,7 @@
    "source": [
     "neuron = 0\n",
     "\n",
-    "tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "\n",
     "fig = plt.figure(figsize=(7.2,5.5))\n",
     "plt.subplot(311)\n",
@@ -3368,7 +3368,7 @@
     "\n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/suppfigures/ttype-assignment.png', dpi=300)"
+    "plt.savefig('../figures/suppfigures/ttype-assignment.png', dpi=300)"
    ]
   },
   {
@@ -3404,7 +3404,7 @@
     "        mu += ttypes['m1boot'][dataset][neuron,:].squeeze()\n",
     "    h3[-1][0].set_ydata(mu/7)\n",
     "    ht.set_text(m1.cells[neuron])\n",
-    "    plt.savefig('figures/sanity-checks/ttype-assignment/{:04}_{}.png'.format(neuron+1, m1.cells[neuron]), dpi=150)\n",
+    "    plt.savefig('../figures/sanity-checks/ttype-assignment/{:04}_{}.png'.format(neuron+1, m1.cells[neuron]), dpi=150)\n",
     "print(' done')"
    ]
   },
@@ -4388,7 +4388,7 @@
     "\n",
     "counts = m1.exonCounts + m1.intronCounts\n",
     "\n",
-    "tasic2018 = pickle.load(open('reduced-allen-data/tasic2018.pickle', 'rb'))\n",
+    "tasic2018 = pickle.load(open('../data/processed/reduced-allen-data/tasic2018.pickle', 'rb'))\n",
     "tasicCounts = tasic2018['counts'] + tasic2018['intronCounts']\n",
     "tasicGenes  = tasic2018['genes']\n",
     "\n",
@@ -4443,7 +4443,7 @@
     "fig.text(0,.33, 'd', fontweight='bold', fontsize=8)\n",
     "fig.text(.5,.33, 'e', fontweight='bold', fontsize=8)\n",
     "\n",
-    "plt.savefig('figures/suppfigures/contamination-markers.png', dpi=400)"
+    "plt.savefig('../figures/suppfigures/contamination-markers.png', dpi=400)"
    ]
   }
  ],
