--- a/code/ttype-coverage.ipynb
+++ b/code/ttype-coverage.ipynb
@@ -63,11 +63,11 @@
     "                                         depth thickness ephys ephysNames exclude \\\n",
     "                                         mice_ages mice_cres morphometrics morphometricsNames zProfiles \\\n",
     "                                         exonLengths intronLengths')\n",
-    "m1 = pickle.load(open('pickles/m1.pickle', 'rb'))\n",
-    "ttypes = pickle.load(open('pickles/ttypes.pickle', 'rb'))\n",
+    "m1 = pickle.load(open('../data/processed/rnaseq/m1.pickle', 'rb'))\n",
+    "ttypes = pickle.load(open('../data/processed/rnaseq/ttypes.pickle', 'rb'))\n",
     "\n",
     "# M1 cluster colors and names\n",
-    "m1data = pickle.load(open('reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/SmartSeq_cells_AIBS.pickle', 'rb'))\n",
     "clusterColors = m1data['neurons']['clusterColors']\n",
     "clusterNames = m1data['neurons']['clusterNames']\n",
     "clusterN = clusterNames.size\n",
@@ -1038,7 +1038,7 @@
     }
    ],
    "source": [
-    "Z = pickle.load(open('pickles/10x-tsne-viplamp.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-viplamp.pickle', 'rb'))\n",
     "subset = np.isin(ttypes['family'], ['Lamp5', 'Vip'])\n",
     "pos = rnaseqTools.map_to_tsne(m1data['viplamp']['counts'], m1data['viplamp']['genes'],\n",
     "                              m1.exonCounts[subset,:], m1.genes, Z, knn=10,\n",
@@ -1118,7 +1118,7 @@
     }
    ],
    "source": [
-    "Z = pickle.load(open('pickles/10x-tsne-pvsst.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-pvsst.pickle', 'rb'))\n",
     "subset = np.isin(ttypes['family'], ['Pvalb', 'Sst'])\n",
     "pos = rnaseqTools.map_to_tsne(m1data['pvsst']['counts'], m1data['pvsst']['genes'],\n",
     "                              m1.exonCounts[subset,:], m1.genes, Z, knn=10,\n",
@@ -1184,7 +1184,7 @@
     }
    ],
    "source": [
-    "Z = pickle.load(open('pickles/10x-tsne-exc.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-exc.pickle', 'rb'))\n",
     "\n",
     "plt.sca(ax5)\n",
     "plt.gca().set_aspect('equal', adjustable='datalim')\n",
@@ -1263,7 +1263,7 @@
     "fig.text(.34, .47, 'd', fontsize=8, fontweight='bold')\n",
     "fig.text(.69, .47, 'e', fontsize=8, fontweight='bold')\n",
     "\n",
-    "plt.savefig('figures/mainfigures/coverage.png', dpi=400)"
+    "plt.savefig('../figures/mainfigures/coverage.png', dpi=400)"
    ]
   },
   {
@@ -2087,8 +2087,8 @@
     "shapes = {'1': '^', '2/3': 'o', '5': 's', '6': '+'}\n",
     "sizes  = {'1': 5,   '2/3': 5,   '5': 4,   '6': 15}\n",
     "\n",
-    "m1data = pickle.load(open('reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
-    "Z = pickle.load(open('pickles/10x-tsne-big.pickle', 'rb'))\n",
+    "m1data = pickle.load(open('../data/processed/reduced-allen-data/10X_cells_v2_AIBS.pickle', 'rb'))\n",
+    "Z = pickle.load(open('../data/processed/rnaseq/10x-tsne-big.pickle', 'rb'))\n",
     "\n",
     "print(Z.shape)\n",
     "\n",
@@ -2126,7 +2126,7 @@
     "    sc.append(s)\n",
     "plt.legend(sc, ['L1','L2/3','L5','L6'])\n",
     "\n",
-    "plt.savefig('figures/suppfigures/tsne.png', dpi=300)"
+    "plt.savefig('../figures/suppfigures/tsne.png', dpi=300)"
    ]
   }
  ],
