--- a/code/allen-data-preprocess.ipynb
+++ b/code/allen-data-preprocess.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,6 +831,15 @@
     "    \n",
     "    with open('../data/processed/reduced-allen-data/' + folder + '.pickle', 'wb') as f:\n",
     "        pickle.dump(m1data, f, protocol=4)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1data = load_allen_data('10X_nuclei_v3_Broad')"
    ]
   },
   {
@@ -3612,7 +3621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
