--- a/code/ttype-assignment.ipynb
+++ b/code/ttype-assignment.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -585,9 +585,9 @@
      "text": [
       "Cells assigned a t-type: 1227\n",
       "Cells assigned an inh t-type: 817\n",
-      "Cells assigned an exc t-type: 361\n",
+      "Cells assigned an exc t-type: 410\n",
       "Cells assigned an inh t-type and reconstructed: 369\n",
-      "Cells assigned an exc t-type and reconstructed: 235\n"
+      "Cells assigned an exc t-type and reconstructed: 269\n"
      ]
     }
    ],
@@ -596,11 +596,11 @@
     "print('Cells assigned an inh t-type:', \n",
     "      np.sum(np.isin(ttypes['family'],['Pvalb','Sst','Sncg','Vip','Lamp5']) & (m1.exclude=='')))\n",
     "print('Cells assigned an exc t-type:', \n",
-    "      np.sum(np.isin(ttypes['family'],['IT','PT','CT','NP']) & (m1.exclude=='')))\n",
+    "      np.sum(np.isin(ttypes['family'],['IT','ET','CT','NP']) & (m1.exclude=='')))\n",
     "print('Cells assigned an inh t-type and reconstructed:', \n",
     "      np.sum(np.isin(ttypes['family'],['Pvalb','Sst','Sncg','Vip','Lamp5']) & (m1.exclude=='') & m1.traced))\n",
     "print('Cells assigned an exc t-type and reconstructed:', \n",
-    "      np.sum(np.isin(ttypes['family'],['IT','PT','CT','NP']) & (m1.exclude=='') & m1.traced))"
+    "      np.sum(np.isin(ttypes['family'],['IT','ET','CT','NP']) & (m1.exclude=='') & m1.traced))"
    ]
   },
   {
@@ -5651,7 +5651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
